# holdNet

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
holdnet/: __init__.py  dataset.py  features.py  plots.py
holdnet/modeling/: predict.py  train.py
