[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "holdnet"
version = "0.0.1"
description = "HoldNet is a machine learning project focused on building a classification system for climbing holds using computer vision."
authors = [
  { name = "David Gonzalez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["holdnet"]
force_sort_within_sections = true
